Resolved issue overlapping between scroll to top button and chatbot

--- a/src/components/ScrollToTop/ScrollToTopButton.module.css
+++ b/src/components/ScrollToTop/ScrollToTopButton.module.css
@@ -1,7 +1,7 @@
 .scrollToTop {
   position: fixed;
-  bottom: 20px;
-  right: 30px;
+  bottom: -235px;
+  left: 30px;
   z-index: 1000;
 }
 
